<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/black"
tools:context=".presentation.ui.fragment.AddVotingFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_block"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginLeft="25dp"
    android:layout_marginTop="25dp"
    android:layout_marginRight="25dp">

    <TextView
        android:id="@+id/textCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_question"
        android:textColor="@color/txt_color_2"
        android:textSize="24sp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextQuestion"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:fontFamily="@font/poppins_medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/enter_question"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCaption" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/variantRecyclerView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:itemCount="5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_variant"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toTopOf="@+id/variantRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuestion" />

    <ImageButton
        android:id="@+id/btnAddVariant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_add_item"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/btnQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_item"
        android:background="@drawable/border_btn_send"
        app:backgroundTint="@color/bg_color_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/variantRecyclerView" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toTopOf="@+id/editTextQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>