<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp">


        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="TODO"
            android:onClick="@{() -> fragment.backToHome()}"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textHeader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/transfer_header"
            android:textColor="@color/txt_color_2"
            android:textSize="24sp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButtonBack" />


        <TextView
            android:id="@+id/text_user_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{viewModel.recipient}"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textHeader" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/to_txt"
            android:textColor="@color/txt_color_4"
            android:textSize="20sp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHeader"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:paddingTop="@dimen/top_margin"
            android:text="@string/amount_txt"
            android:textColor="@color/txt_color_4"
            android:textSize="18sp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@+id/text_user_field"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hint_color"
            android:ems="10"
            android:hint="$0.00"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_btn_send"
            android:text="@string/send_btn_txt"
            app:backgroundTint="@color/bg_color_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSum" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>