<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/success_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:paddingTop="50dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border_btn_send"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <ImageView
                    android:id="@+id/imageSuccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:contentDescription="TODO"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_success_icon"
                    tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_successful"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="ScrollViewSize,UselessLeaf">

                <TextView
                    android:id="@+id/textViewCaption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/detail_transaction"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton2"
                    app:layout_constraintStart_toEndOf="@+id/imageButton"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border_btn_send"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textDetailName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/texDetailNumberCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border_btn_send"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textDetailSum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingBottom="10dp"
                    android:text="$ 20"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textDetailDate"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText,MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/textDetailDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="50dp"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/textDetailShare"
                    app:layout_constraintTop_toBottomOf="@+id/textDetailSum"
                    tools:ignore="HardcodedText,MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/textDetailTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textDetailDate"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.377"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/textDetailShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/share_receipt"
                    android:textColor="@color/green_bg"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:onClick="@{() -> fragment.createPDFTransaction()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDetailDate"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/buttonDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_done_btn"
                android:backgroundTint="@color/blue_bg"
                android:text="@string/btn_done"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@color/blue_bg"
                android:onClick="@{() -> fragment.backToHome()}"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>